--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-preset-stage-3": "^6.24.1",
     "cross-env": "^5.2.0",
     "css-loader": "^2.1.0",
+    "chalk": "^2.0.1",
     "file-loader": "^3.0.1",
     "node-sass": "^4.11.0",
     "sass-loader": "^7.1.0",
@@ -29,8 +30,12 @@
   },
   "dependencies": {
     "babel-loader": "^7.1.5",
+    "extract-text-webpack-plugin": "^3.0.2",
     "lodash": "^4.17.11",
-    "vue": "^2.5.21"
+    "ora": "^3.2.0",
+    "shelljs": "^0.8.3",
+    "vue": "^2.5.21",
+    "webpack-merge": "^4.2.1"
   },
   "engines": {
     "node": ">= 6.0.0",
